2020-07-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/linksrc/lkarea.c:
	  Set sane default values for gbz80 banks.

2020-07-22 Sergey Belyashov <sergey.belyashov@gmail.com>

	* support/regression/tests/memory.c:
	  Fix test compilation on small systems

2020-07-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/mappings.i:
	  Unify emitted gbz80 asm and fix indentation.

2020-07-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/main.c:
	  Improve rule order for gbz80
	* src/z80/peeph-gbz80.def:
	  Remove sp0, which wasn't interrupt safe

2020-07-20 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/ez80_z80/memcpy.s,
	  device/lib/z180/memcpy.s,
	  device/lib/z80/memcpy.s,
	  device/lib/z80n/memcpy.s,
	  support/regression/tests/memory.c:
	  Fix invalid return value of memcpy implementation for Z80.

2020-07-21 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCpeeph.c:
	  Fix possible ready beyond a buffer in canJoinRegs constraint.

2020-07-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  Sanity checks for sscanf arguments.

2020-07-20 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/ez80_z80/Makefile.in,
	  device/lib/ez80_z80/__itoa.s,
	  device/lib/ez80_z80/__ltoa.s,
	  device/lib/ez80_z80/__strreverse.s,
	  device/lib/ez80_z80/__uitobcd.s,
	  device/lib/ez80_z80/__ultobcd.s:
	  Fix Bug #3077 for eZ80_Z80 port
	* device/lib/z180/Makefile.in,
	  device/lib/z180/__itoa.s,
	  device/lib/z180/__ltoa.s,
	  device/lib/z180/__strreverse.s,
	  device/lib/z180/__uitobcd.s,
	  device/lib/z180/__ultobcd.s:
	  Fix Bug #3077 for Z180 port
	* device/lib/z80n/Makefile.in,
	  device/lib/z80n/__itoa.s,
	  device/lib/z80n/__ltoa.s,
	  device/lib/z80n/__strreverse.s,
	  device/lib/z80n/__uitobcd.s,
	  device/lib/z80n/__ultobcd.s:
	  Fix Bug #3077 for Z80N port

2020-07-20 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph-ez80_z80.def:
	  Fix ez80 peephole rules 9hl and 9de.
